fix: increase modal width on tablet

--- a/JobFairApplication/src/global.scss
+++ b/JobFairApplication/src/global.scss
@@ -48,4 +48,8 @@
     position: absolute; 
     display: block;
     width: 50% !important;  
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+        width: 90% !important;
+    }
  }
